// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should render correctly when total items is 0 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: calc(0.8rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1rem - 0.2rem) calc(2.4rem - 0.2rem);
  border-radius: 0.8rem;
  border: 0.2rem solid;
  color: #005AEE;
  border-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD * {
  fill: #005AEE;
}

.c1:hover {
  color: #1A6BF0;
  border-color: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c1:hover .sc-AykKD * {
  fill: #1A6BF0;
}

.c1:disabled {
  box-shadow: none;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c1:disabled .sc-AykKD * {
  fill: #b0bcc8;
}

.c1 .sc-AykKD + .c2 {
  margin-left: 0.8rem;
}

.c1 .c2 + .sc-AykKD {
  margin-left: 0.8rem;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        color="default"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          First
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Prev
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Next
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Last
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the default props 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: calc(0.8rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1rem - 0.2rem) calc(2.4rem - 0.2rem);
  border-radius: 0.8rem;
  border: 0.2rem solid;
  color: #005AEE;
  border-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD * {
  fill: #005AEE;
}

.c1:hover {
  color: #1A6BF0;
  border-color: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c1:hover .sc-AykKD * {
  fill: #1A6BF0;
}

.c1:disabled {
  box-shadow: none;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c1:disabled .sc-AykKD * {
  fill: #b0bcc8;
}

.c1 .sc-AykKD + .c2 {
  margin-left: 0.8rem;
}

.c1 .c2 + .sc-AykKD {
  margin-left: 0.8rem;
}

.c4 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  color: #ffffff;
  background: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4 .sc-AykKD * {
  fill: #ffffff;
}

.c4:hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c4:disabled {
  box-shadow: none;
  color: #98A7B7;
  background: #dfe4e9;
}

.c4 .sc-AykKD + .c2 {
  margin-left: 0.8rem;
}

.c4 .c2 + .sc-AykKD {
  margin-left: 0.8rem;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        color="default"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          First
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Prev
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          4
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          5
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          Next
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          Last
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the props given 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: 0.8rem 2.4rem 1rem 2.4rem;
  border-radius: 0.8rem;
  color: #ffffff;
  background: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD * {
  fill: #ffffff;
}

.c1:hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c1:disabled {
  box-shadow: none;
  color: #98A7B7;
  background: #dfe4e9;
}

.c1 .sc-AykKD + .c2 {
  margin-left: 0.8rem;
}

.c1 .c2 + .sc-AykKD {
  margin-left: 0.8rem;
}

.c4 {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  padding: calc(0.8rem - 0.2rem) calc(2.4rem - 0.2rem) calc(1rem - 0.2rem) calc(2.4rem - 0.2rem);
  border-radius: 0.8rem;
  border: 0.2rem solid;
  color: #005AEE;
  border-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4 .sc-AykKD * {
  fill: #005AEE;
}

.c4:hover {
  color: #1A6BF0;
  border-color: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.35);
}

.c4:hover .sc-AykKD * {
  fill: #1A6BF0;
}

.c4:disabled {
  box-shadow: none;
  color: #b0bcc8;
  border-color: #b0bcc8;
}

.c4:disabled .sc-AykKD * {
  fill: #b0bcc8;
}

.c4 .sc-AykKD + .c2 {
  margin-left: 0.8rem;
}

.c4 .c2 + .sc-AykKD {
  margin-left: 0.8rem;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="default"
        type="button"
      >
        <span
          class="c2 c3"
        >
          4
        </span>
      </button>
    </li>
  </ul>
</div>
`;
